word wrap fix

--- a/app/chat.css
+++ b/app/chat.css
@@ -91,11 +91,12 @@ a {
 }
 
 .feed {
-  flex: 1 0 auto;
+  flex: 1;
   background: #fff;
   padding: 8px;
-  overflow-wrap: break-word;
   word-wrap: break-word;
+  overflow-wrap: break-word;
+  overflow-y: auto;
 }
 
 .feed img {
@@ -144,6 +145,10 @@ a {
   font-size: 13px;
   color: #929294;
   margin-left: 6px;
+}
+
+.m-text {
+  
 }
 
 .update {
@@ -212,15 +217,14 @@ a {
 
 .minimize-check {
   cursor: pointer;
+  -webkit-appearance: none;
+  -moz-appearance: none;
   appearance: none;
   display: none;
   justify-content: center;
   background-color: #eee;
   margin: 0;
   color: #ccc;
-}
-
-.minimize-check:focus {
   outline: none;
 }
 
